# anarcat-feed2exec

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  feed2exec.ini  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.gitlab/issue_templates/: Bug.md
completion/: feed2exec
debian/: NEWS  changelog  control  copyright  feed2exec.docs  gbp.conf  manpages  rules
doc/: Makefile  api.rst  changelog.rst  conf.py  contact.rst  design.rst  index.rst  plugins.rst  refs.rst.inc  support.rst  usage.rst  webirc.html
feed2exec/: __init__.py  __main__.py  controller.py  email.py  feeds.py  logging.py  model.py  utils.py
feed2exec/plugins/: __init__.py  addlink.py  archive.py  droptitle.py  echo.py  emptysummary.py  error.py  exec.py  html2text.py  ikiwiki_recentchanges.py  json.py  maildir.py  mbox.py  null.py  test.py  transmission.py  unique.py  wayback.py
feed2exec/tests/: conftest.py  fixtures.py  pytest.ini  test_feeds.py  test_main.py  test_migrate.py  test_network.py  test_opml.py  test_plugins.py
feed2exec/tests/cassettes/: feed2exec.tests.test_feeds.test_failed_cert.json  feed2exec.tests.test_feeds.test_fetch.json  feed2exec.tests.test_feeds.test_fetch_cache.json  feed2exec.tests.test_feeds.test_fetch_parallel.json  feed2exec.tests.test_main.test_planet.json  feed2exec.tests.test_plugins.test_archive.json  feed2exec.tests.test_plugins.test_wayback.json  feed2exec.tests.test_plugins.test_wayback_archive[full].json  feed2exec.tests.test_plugins.test_wayback_archive[page].json  feed2exec.tests.test_plugins.test_wayback_catchup[full].json  feed2exec.tests.test_plugins.test_wayback_catchup[page].json  feed2exec.tests.test_plugins.test_wayback_example_404[page].json  feed2exec.tests.test_plugins.test_wayback_example_invalid[full].json  feed2exec.tests.test_plugins.test_wayback_example_invalid[page].json  feed2exec.tests.test_plugins.test_wayback_example_too_fast[full].json  feed2exec.tests.test_plugins.test_wayback_example_working[full].json  feed2exec.tests.test_plugins.test_wayback_example_working[page].json  feed2exec.tests.test_plugins.test_wayback_invalid_example[full].json  feed2exec.tests.test_plugins.test_wayback_invalid_example[page].json  planet-debian.mbx  planet-debian.yml  wayback.yml
feed2exec/tests/files/: README.mdwn  breaking_news.mbx  breaking_news.xml  dsa.mbx-manual  dsa.xml  duplicates.ini  duplicates.opml  liferea.ini  liferea.opml  planet-debian.mbx  planet-debian.xml  restic.atom  restic.mbx  rsswithpermalink.xml  sample.mbx  sample.xml  security.opml  simple.ini  simple.opml  udd.mbx  udd.rss  weird-dates.mbx  weird-dates.xml
feedplugs/: __main__.py
