# no stub files for those third-party libraries on typeshed
[[tool.mypy.overrides]]
module = [
  "betamax",
  "cachecontrol",
  "feedparser",
  "html2text",
  "lxml",
  "pytest",
  "requests_file",
  "setuptools_scm",
  "unidecode",
  "xdg",
  "xdg.BaseDirectory",
]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]

[tool.setuptools_scm]
write_to = "feed2exec/_version.py"
