[metadata]
name = feed2exec
authors = Antoine Beaupré
author_email = anarcat@debian.org
description = The programmable feed reader
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    # this list should match the Python images in .gitlab-ci.yml
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Communications :: Email
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary
    Topic :: Text Processing :: Markup :: HTML
license = AGPLv3
license_file = LICENSE.rst
project_urls =
  homepage = https://gitlab.com/anarcat/feed2exec
  documentation = https://feed2exec.readthedocs.io

[options]
# this must be kept in sync with .gitlab-ci.yml
requires_python = ">=3.6"
# specific to poetry, might not work?
packages = 
    feed2exec
    feed2exec.plugins
    feed2exec.tests
include_package_data = True
install_requires =
    cachecontrol
    click
    dateparser
    feedparser>=5.0 ; python_version >= '3'
    feedparser<6.0 ; python_version < '3.6'
    feedparser>=6.0.0b3 ; python_version >= '3.6'
    html2text
    html5lib
    lxml
    pyxdg
    requests
    requests-file
    setuptools_scm
    unidecode

[options.package_data]
* = feed2exec/tests/files/*

[options.data_files]
share/bash-completion/completions/ =
  completion/feed2exec

[options.extras_require]
test =
    betamax>=0.8.0
    pyflakes
    pytest
    pytest-cov
    tox

[options.entry_points]
console_scripts =
    feed2exec = feed2exec.__main__:main

[tool:pytest]
addopts = --cov=feed2exec --doctest-modules
# requires the catchlog pytest plugin:
# https://pypi.python.org/pypi/pytest-catchlog/
log_cli_level = DEBUG

[aliases]
test=pytest

[flake8]
max-line-length=120
